Prevent modal windows from being cut off in Chrome by a intermittent bug

--- a/app/stylesheets/theme/_common/style.scss
+++ b/app/stylesheets/theme/_common/style.scss
@@ -514,6 +514,7 @@ table .partial { margin: 0.25em 0; }
 }
 .modal {
   @include bg(#333333, #FFF);
+  z-index: 5;
   width: 450px;
   position: absolute;
   top: 0px;
@@ -579,11 +580,15 @@ table .partial { margin: 0.25em 0; }
     @include bg(#333333, #ffffff);
     @include rounded(9px);
     overflow: auto;
+    height: 640px;
     form {
       @include pretty-forms;
       @include form-field-two-line;
       width: 80%;
       margin-left: 10%;
+      label {
+        display: block;
+      }
     }
   }
   .footer {
